--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <h3> A. Sistemas continuos bidimensionales</h3>
     <ul>
     <li>A.1 Sistemas y señales continuas 2D:
-      <a href="A/PAS-A1-Sistemas_2D.html">New</a> <a href="PAS-A-Sistemas_2D.jl.html">Old</a> </li>
+      <a href="PAS-A1-Sistemas_2D.html">New</a> <a href="PAS-A-Sistemas_2D.jl.html">Old</a> </li>
     <li>A.2 Señales 2D:
       <!-- <a href="PAS-A2-Sistemas_2D.html">New</a> --> <a href="PAS-A-Senales_2D.jl.html">Old</a> </li>
     <li>A.3 Señales útiles 2D:
