--- a/index.html
+++ b/index.html
@@ -3,7 +3,31 @@
   <head>
     <title>IEE3702</title>
   </head>
-  <body>
+
+  <style>
+  a:link {
+    color: burlywood;
+    background-color: transparent;
+    text-decoration: none;
+  }
+  a:visited {
+    color: darkgray;
+    background-color: transparent;
+    text-decoration: none;
+  }
+  a:hover {
+    color: yellow;
+    background-color: transparent;
+    text-decoration: underline;
+  }
+  a:active {
+    color: yellow;
+    background-color: transparent;
+    text-decoration: underline;
+  }
+  </style>
+
+  <body style="background-color:black; color:white">
 
   <h1>IEE3702 Procesamiento Avanzado de Señales </h1>
   <p> Pablo Irarrázaval </p>
@@ -128,3 +152,30 @@
 
   </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
