--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <li>A.1 Sistemas y señales continuas 2D:
       <a href="PAS-A1-Sistemas_2D.html">New</a> <a href="PAS-A-Sistemas_2D.jl.html">Old</a> </li>
     <li>A.2 Señales 2D:
-      <!-- <a href="PAS-A2-Sistemas_2D.html">New</a> --> <a href="PAS-A-Senales_2D.jl.html">Old</a> </li>
+      <a href="PAS-A2-Senales_2D.html">New</a> <a href="PAS-A-Senales_2D.jl.html">Old</a> </li>
     <li>A.3 Señales útiles 2D:
       <!-- <a href="PAS-A3-Senales_utiles_2D.html">New</a> --> <a href="PAS-A-Senales_utiles_2D.jl.html">Old</a> </li>
     <li>A.4 Impulso 2D:
