--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   <p> Este curso es una continuación del curso de Señales y Sistema, donde se abordan señales más avanzadas, esto es, señales bidimensionales y estocásticas. Supone que el estudiante conoce los conceptos de sistemas lineales y convolución, y el análisis en el dominio de la frecuencia (transformada de Fourier y Laplace). En este curso se estudian señales bidimensionales o imágenes que representan una aplicación cada vez más presente en el mundo moderno. Y se estudian los sistemas lineales y filtros aplicados a señales estocásticas. Estas señales son una representación más fidedigna de la realidad ya que incluyen las variaciones al azar, típicas del ruido o de procesos que no se controlan totalmente. </p>
 
   <h2> Material de clases</h2>
+  En los siguientes links podrán encontrar los Notebooks Pluto con el material de la clase. El link "Old" lleva a los notebooks de la versión pasada de este curso, preparados por el profesor Rodrigo Cádiz. El link "New" lleva a la actualización hecha por mi.
   <h3> A. Sistemas continuos bidimensionales</h3>
     <ul>
     <li>A.1 Sistemas y señales continuas 2D:
