--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <li>A.3 Señales útiles 2D:
       <a href="PAS-A3-Senales_utiles_2D.html">New</a> <a href="PAS-A-Senales_utiles_2D.jl.html">Old</a> </li>
     <li>A.4 Impulso 2D:
-      <!-- <a href="PAS-A4-Impulso_2D.html">New</a> --> <a href="PAS-A-Impulso_2D.jl.html">Old</a> </li>
+      <a href="PAS-A4-Impulsos_2D.html">New</a> <a href="PAS-A-Impulsos_2D.jl.html">Old</a> </li>
     <li>A.5 Convolución 2D:
       <!-- <a href="PAS-A5-Convolucion_2D.html">New</a> --> <a href="PAS-A-Convolucion_2D.jl.html">Old</a> </li>
     <li>A.6 Transformada de Fourier 2D:
