--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <li>A.4 Impulso 2D:
       <a href="PAS-A4-Impulsos_2D.html">New</a> <a href="PAS-A-Impulsos_2D.jl.html">Old</a> </li>
     <li>A.5 Convolución 2D:
-      <!-- <a href="PAS-A5-Convolucion_2D.html">New</a> --> <a href="PAS-A-Convolucion_2D.jl.html">Old</a> </li>
+      <a href="PAS-A5-Convolucion_2D.html">New</a> <a href="PAS-A-Convolucion_2D.jl.html">Old</a> </li>
     <li>A.6 Transformada de Fourier 2D:
       <!-- <a href="PAS-A6-Fourier_2D.html">New</a> --> <a href="PAS-A-Fourier_2D.jl.html">Old</a> </li>
     <li>A.7 Pares de Fourier 2D:
