--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <li>A.5 Convolución 2D:
       <a href="PAS-A5-Convolucion_2D.html">New</a> <a href="PAS-A-Convolucion_2D.jl.html">Old</a> </li>
     <li>A.6 Transformada de Fourier 2D:
-      <!-- <a href="PAS-A6-Fourier_2D.html">New</a> --> <a href="PAS-A-Fourier_2D.jl.html">Old</a> </li>
+      <a href="PAS-A6-Fourier_2D.html">New</a> <a href="PAS-A6-Fourier_2D_figs.html">New (con figureas)</a> <a href="PAS-A-Fourier_2D.jl.html">Old</a> </li>
     <li>A.7 Pares de Fourier 2D:
       <!-- <a href="PAS-A3-Senales_utiles_2D.html">New</a> --> <a href="PAS-A-Pares_Fourier_2D.jl.html">Old</a> </li>
     <li>A.8 Propiedades de la Transformada de Fourier 2D:
