--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
     <li>A.6 Transformada de Fourier 2D:
       <a href="PAS-A6-Fourier_2D.html">New</a> <a href="PAS-A6-Fourier_2D_figs.html">New (con figureas)</a> <a href="PAS-A-Fourier_2D.jl.html">Old</a> </li>
     <li>A.7 Pares de Fourier 2D:
-      <!-- <a href="PAS-A3-Senales_utiles_2D.html">New</a> --> <a href="PAS-A-Pares_Fourier_2D.jl.html">Old</a> </li>
+      <a href="PAS-A7-Pares_Fourier_2D.html">New</a> <a href="PAS-A-Pares_Fourier_2D.jl.html">Old</a> </li>
     <li>A.8 Propiedades de la Transformada de Fourier 2D:
-      <!-- <a href="PAS-A8-Propiedades_Fourier_2D.html>New</a> --> <a href="PAS-A-Propiedades_Fourier_2D.jl.html">Old</a> </li>
+      <a href="PAS-A8-Propiedades_Fourier_2D.html">New</a> <a href="PAS-A-Propiedades_Fourier_2D.jl.html">Old</a> </li>
     <li>A.9 Otras transformadas 2D continuas:
       <!-- <a href="PPAS-A9-Otras_Transformadas_2D.html">New</a> --> <a href="PAS-A-Otras_Transformadas_2D.jl.html">Old</a> </li>
     <li>A.10 Extensión a más dimensiones:
