--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <li>A.9 Otras transformadas 2D continuas:
       <a href="PAS-A9-Otras_Transformadas_2D.html">New</a> <a href="PAS-A-Otras_Transformadas_2D.jl.html">Old</a> </li>
     <li>A.10 Extensión a más dimensiones:
-      <!-- <a href="PAS-A10-Extension_Rn.html">New</a> --> <a href="PAS-A-Extension_Rn.jl.html">Old</a> </li>
+      <a href="PAS-A10-Extension_Rn.html">New</a> <a href="PAS-A-Extension_Rn.jl.html">Old</a> </li>
     </ul>
 
     <h3> B. Sistemas y señales discretas</h3>
