--- a/index.html
+++ b/index.html
@@ -64,23 +64,23 @@
     <h3> B. Sistemas y señales discretas</h3>
     <ul>
     <li>B.1 Muestreo 2D:
-      <!-- <a href="PAS-B1-Muestreo_2D.jl.html">New</a> --> <a href="PAS-B-Muestreo_2D.jl.html">Old</a> </li>
+      <a href="PAS-B1-Muestreo_2D.html">New</a> <a href="PAS-B-Muestreo_2D.jl.html">Old</a> </li>
     <li>B.2. Sistemas 2D:
-      <!-- <a href="PAS-B2-Sistemas_2D.jl.html">New</a> --> <a href="PAS-B-Sistemas_2D.jl.html">Old</a> </li>
+      <a href="PAS-B2-Sistemas_2D.html">New</a> <a href="PAS-B-Sistemas_2D.jl.html">Old</a> </li>
     <li>B.3 Señales 2D:
-      <!-- <a href="PAS-B3-Senales_2D.jl.html">New</a> --> <a href="PAS-B-Senales_2D.jl.html">Old</a> </li>
+      <a href="PAS-B3-Senales-2D.html">New</a> <a href="PAS-B-Senales_2D.jl.html">Old</a> </li>
     <li>B.4 Señales útiles 2D:
-      <!-- <a href="PAS-B4-Senales_utiles_2D.jl.html">New</a> --> <a href="PAS-B-Senales_utiles_2D.jl.html">Old</a> </li>
+      <a href="PAS-B4-Senales_utiles_2D.html">New</a> <a href="PAS-B-Senales_utiles_2D.jl.html">Old</a> </li>
     <li>B.5 Convolución 2D:
-      <!-- <a href="PAS-B5-Convolucion_2D.jl.html">New</a> --> <a href="PAS-B-Convolucion_2D.jl.html">Old</a> </li>
+      <a href="PAS-B5-Convolucion_2D.html">New</a> <a href="PAS-B-Convolucion_2D.jl.html">Old</a> </li>
     <li>B.6 2D-DFT:
-      <!-- <a href="PAS-B6-2D_DFT.jl.html">New</a> --> <a href="PAS-B-2D_DFT.jl.html">Old</a> </li>
+      <a href="PAS-B6-2D_DFT.html">New</a> <a href="PAS-B-2D_DFT.jl.html">Old</a> </li>
     <li>B.7 Propiedades de la 2D-DFT:
-      <!-- <a href="PAS-B7-Propiedades_2D_DFT.jl.html">New</a> --> <a href="PAS-B-Propiedades_2D_DFT.jl.html">Old</a> </li>
+      <a href="PAS-B7-Propiedades_2D_DFT.html">New</a> <a href="PAS-B-Propiedades_2D_DFT.jl.html">Old</a> </li>
     <li>B.8 Otras Transformadas 2D discretas:
-      <!-- <a href="PAS-B8-Otras_Transformadas_2D.jl.html>New</a> --> <a href="PAS-B-Otras_Transformadas_2D.jl.html">Old</a> </li>
+      <!-- <a href="PAS-B8-Otras_Transformadas_2D.html">New</a> --> <a href="PAS-B-Otras_Transformadas_2D.jl.html">Old</a> </li>
     <li>B.9 Extensión a más dimensiones:
-      <!-- <a href="PAS-B9-Extension_Zn.jl.html">New</a> --> <a href="PAS-B-Extension_Zn.jl.html">Old</a> </li>
+      <a href="PAS-B9-Extension_Zn.html">New</a> <a href="PAS-B-Extension_Zn.jl.html">Old</a> </li>
     </ul>
 
     <h3> C. Señales y procesos estocásticos</h3>
