--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <li>B.7 Propiedades de la 2D-DFT:
       <a href="PAS-B7-Propiedades_2D_DFT.html">New</a> <a href="PAS-B-Propiedades_2D_DFT.jl.html">Old</a> </li>
     <li>B.8 Otras Transformadas 2D discretas:
-      <!-- <a href="PAS-B8-Otras_Transformadas_2D.html">New</a> --> <a href="PAS-B-Otras_Transformadas_2D.jl.html">Old</a> </li>
+      <a href="PAS-B8-Otras_Transformadas_2D.html">New</a> <a href="PAS-B-Otras_Transformadas_2D.jl.html">Old</a> </li>
     <li>B.9 Extensión a más dimensiones:
       <a href="PAS-B9-Extension_Zn.html">New</a> <a href="PAS-B-Extension_Zn.jl.html">Old</a> </li>
     </ul>
