--- a/index.html
+++ b/index.html
@@ -86,19 +86,19 @@
     <h3> C. Señales y procesos estocásticos</h3>
     <ul>
     <li>C.1 Variables aleatorias:
-      <!-- <a href="PAS-C1-Variables_aleatorias.html">New</a> --> <a href="PAS-C-Variables_aleatorias.jl.html">Old</a> </li>
+      <a href="PAS-C1-Variables_aleatorias.html">New</a> <a href="PAS-C-Variables_aleatorias.jl.html">Old</a> </li>
     <li>C.2 Vectores aleatorios:
-      <!-- <a href="PAS-C2-Vectores_aleatorios.html">New</a> --> <a href="PAS-C-Vectores_aleatorios.jl.html">Old</a> </li>
+      <a href="PAS-C2-Vectores_aleatorios.html">New</a> <a href="PAS-C-Vectores_aleatorios.jl.html">Old</a> </li>
     <li>C.3 Procesos estocásticos:
-      <!-- <a href="PAS-C3-Procesos_estocasticos.html">New</a> --> <a href="PAS-C-Procesos_estocasticos.jl.html">Old</a> </li>
+      <a href="PAS-C3-Procesos_estocasticos.html">New</a> <a href="PAS-C-Procesos_estocasticos.jl.html">Old</a> </li>
     <li>C.4 Autocorrelación:
-      <!-- <a href="PAS-C4-Autocorrelacion.html">New</a> --> <a href="PAS-C-Autocorrelacion.jl.html">Old</a> </li>
+      <a href="PAS-C4-Autocorrelacion.html">New</a> <a href="PAS-C-Autocorrelacion.jl.html">Old</a> </li>
     <li>C.5 Propiedades de los procesos estocásticos:
-      <!-- <a href="PAS-C5-Propiedades_procesos_estocasticos.html">New</a> --> <a href="PAS-C-Propiedades_procesos_estocasticos.jl.html">Old</a> </li>
+      <a href="PAS-C5-Propiedades_procesos_estocasticos.html">New</a> <a href="PAS-C-Propiedades_procesos_estocasticos.jl.html">Old</a> </li>
     <li>C.6 Densidad espectral de potencia:
-      <!-- <a href="PAS-C6-Densidad_espectral_de_potencia.html">New</a> --> <a href="PAS-C-Densidad_espectral_de_potencia.jl.html">Old</a> </li>
+      <a href="PAS-C6-Densidad_espectral_de_potencia.html">New</a> <a href="PAS-C-Densidad_espectral_de_potencia.jl.html">Old</a> </li>
     <li>C.7 Sistemas lineales con entradas aleatorias estacionales:
-      <!-- <a href="PAS-C7-Sistemas_lineales.html">New</a> --> <a href="PAS-C-Sistemas_lineales.jl.html">Old</a> </li>
+      <a href="PAS-C7-Sistemas_lineales.html">New</a> --> <a href="PAS-C-Sistemas_lineales.jl.html">Old</a> </li>
     </ul>
 
     <h3> D. Modelos lineales de señal </h3>
