--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <li>C.6 Densidad espectral de potencia:
       <a href="PAS-C6-Densidad_espectral_de_potencia.html">New</a> <a href="PAS-C-Densidad_espectral_de_potencia.jl.html">Old</a> </li>
     <li>C.7 Sistemas lineales con entradas aleatorias estacionales:
-      <a href="PAS-C7-Sistemas_lineales.html">New</a> --> <a href="PAS-C-Sistemas_lineales.jl.html">Old</a> </li>
+      <a href="PAS-C7-Sistemas_lineales.html">New</a> <a href="PAS-C-Sistemas_lineales.jl.html">Old</a> </li>
     </ul>
 
     <h3> D. Modelos lineales de señal </h3>
