--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <a href="PAS-C5-Propiedades_procesos_estocasticos.html">New</a> <a href="PAS-C-Propiedades_procesos_estocasticos.jl.html">Old</a> </li>
     <li>C.6 Densidad espectral de potencia:
       <a href="PAS-C6-Densidad_espectral_de_potencia.html">New</a> <a href="PAS-C-Densidad_espectral_de_potencia.jl.html">Old</a> </li>
-    <li>C.7 Sistemas lineales con entradas aleatorias estacionales:
+    <li>C.7 Sistemas lineales con entradas aleatorias estacionarias:
       <a href="PAS-C7-Sistemas_lineales.html">New</a> <a href="PAS-C-Sistemas_lineales.jl.html">Old</a> </li>
     </ul>
 
