--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
     <h3> D. Modelos lineales de señal </h3>
     <ul>
     <li> D.1 Modelos de señal:
-      <!-- <a href="PAS-D1-Modelos_de_senal.html">New</a> --> <a href="PAS-D-Modelos_de_senal.jl.html">Old</a> </li>
+      <a href="PAS-D1-Modelos_de_senal.html">New</a> <a href="PAS-D-Modelos_de_senal.jl.html">Old</a> </li>
     <li> D.2 Modelos lineales no paramétricos:
-      <!-- <a href="PAS-D2-Modelos_no_parametricos.html">New</a> --> <a href="PAS-D-Modelos_no_parametricos.jl.html">Old</a> </li>
+      <a href="PAS-D2-Modelos_no_parametricos.html">New</a> <a href="PAS-D-Modelos_no_parametricos.jl.html">Old</a> </li>
     <li> D.3 Modelos de polos (all-pole):
       <!-- <a href="PAS-D3-Modelos_polos.html">New</a> --> <a href="PAS-D-Modelos_polos.jl.html">Old</a> </li>
     <li> D.4 Modelos de ceros (all-zero):
