--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <li> D.2 Modelos lineales no paramétricos:
       <a href="PAS-D2-Modelos_no_parametricos.html">New</a> <a href="PAS-D-Modelos_no_parametricos.jl.html">Old</a> </li>
     <li> D.3 Modelos de polos (all-pole):
-      <!-- <a href="PAS-D3-Modelos_polos.html">New</a> --> <a href="PAS-D-Modelos_polos.jl.html">Old</a> </li>
+      <a href="PAS-D3-Modelos_polos.html">New</a> <a href="PAS-D-Modelos_polos.jl.html">Old</a> </li>
     <li> D.4 Modelos de ceros (all-zero):
       <!-- <a href="PAS-D4-Modelos_ceros.html">New</a> --> <a href="PAS-D-Modelos_ceros.jl.html">Old</a> </li>
     <li> D.5 Modelos de polos y ceros (pole-zeros):
