--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
     <li> D.3 Modelos de polos (all-pole):
       <a href="PAS-D3-Modelos_polos.html">New</a> <a href="PAS-D-Modelos_polos.jl.html">Old</a> </li>
     <li> D.4 Modelos de ceros (all-zero):
-      <!-- <a href="PAS-D4-Modelos_ceros.html">New</a> --> <a href="PAS-D-Modelos_ceros.jl.html">Old</a> </li>
+      <a href="PAS-D4-Modelos_ceros.html">New</a> <a href="PAS-D-Modelos_ceros.jl.html">Old</a> </li>
     <li> D.5 Modelos de polos y ceros (pole-zeros):
-      <!-- <a href="PAS-D5-Modelos_polos_ceros.html">New</a> --> <a href="PAS-D-Modelos_polos_ceros.jl.html">Old</a> </li>
+      <a href="PAS-D5-Modelos_polos_ceros.html">New</a> <a href="PAS-D-Modelos_polos_ceros.jl.html">Old</a> </li>
     </ul>
 
     <h3> E. Estimación del espectro </h3>
