--- a/index.html
+++ b/index.html
@@ -117,11 +117,13 @@
 
     <h3> E. Estimación del espectro </h3>
     <ul>
-    <li> E.1 Fundamentos de la estimación de espectro:
+    <li> E.1 Estimación del espectro - no paramétrico y paramétrico:
+      <a href="PAS-E1-Estimacion_espectro.html">New</a> </li>
+    <li> E.1a Fundamentos de la estimación de espectro:
       <!-- <a href="PAS-E1-Estimacion_espectro.html">New</a> --> <a href="PAS-E-Estimacion_espectro.jl.html">Old</a> </li>
-    <li> E.2 Estimación no paramétrica: Periodograma:
+    <li> E.2a Estimación no paramétrica: Periodograma:
       <!-- <a href="PAS-E2-Estimacion_no_parametrica.html">New</a> --> <a href="PAS-E-Estimacion_no_parametrica.jl.html">Old</a> </li>
-    <li> E.3 Estimación paramétrica:
+    <li> E.3a Estimación paramétrica:
       <!-- <a href="PAS-E3-Estimacion_parametrica.html">New</a> --> <a href="PAS-E-Estimacion_parametrica.jl.html">Old</a> </li>
     </ul>
 
