--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <h3> F. Filtros lineales óptimos </h3>
     <ul>
     <li> F.1 Filtros óptimos:
-      <!-- <a href="PAS-F1-Filtros_optimos.html">New</a> --> <a href="PAS-F-Filtros_optimos.jl.html">Old</a> </li>
+      <a href="PAS-F1-Filtros_optimos.html">New</a> <a href="PAS-F-Filtros_optimos.jl.html">Old</a> </li>
     <li> F.2 Filtro Wiener-Kolmogorov:
       <!-- <a href="PAS-F2-Filtro_Wiener.html">New</a> --> <a href="PAS-F-Filtro_Wiener.jl.html">Old</a> </li>
     <li> F.3 Predicción lineal:
