--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <li> F.2 Filtro Wiener-Kolmogorov:
       <a href="PAS-F2-Filtro_Wiener.html">New</a> <a href="PAS-F-Filtro_Wiener.jl.html">Old</a> </li>
     <li> F.3 Predicción lineal:
-      <<a href="PAS-F3-Prediccion_lineal.html">New</a> <a href="PAS-F-Prediccion_lineal.jl.html">Old</a> </li>
+      <a href="PAS-F3-Prediccion_lineal.html">New</a> <a href="PAS-F-Prediccion_lineal.jl.html">Old</a> </li>
     <li> F.4 Filtros inversos y deconvolución:
       <!-- <a href="PAS-F4-Filtros_inversos_deconvolucion.jl.html">New</a> --> <a href="PAS-F-Filtros_inversos_deconvolucion.jl.html">Old</a> </li>
     <li> F.5 Filtros adaptados y autofiltros:
