--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <li> F.3 Predicción lineal:
       <a href="PAS-F3-Prediccion_lineal.html">New</a> <a href="PAS-F-Prediccion_lineal.jl.html">Old</a> </li>
     <li> F.4 Filtros inversos y deconvolución:
-      <!-- <a href="PAS-F4-Filtros_inversos_deconvolucion.jl.html">New</a> --> <a href="PAS-F-Filtros_inversos_deconvolucion.jl.html">Old</a> </li>
+      <a href="PAS-F4-Filtros_inversos_deconvolucion.html">New</a> <a href="PAS-F-Filtros_inversos_deconvolucion.jl.html">Old</a> </li>
     <li> F.5 Filtros adaptados y autofiltros:
       <!-- <a href="PAS-F5-Filtros_adaptados.html">New</a> --> <a href="PAS-F-Filtros_adaptados.jl.html">Old</a> </li>
     <li> F.6 Filtro Kalman:
