--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
     <li> F.4 Filtros inversos y deconvolución:
       <a href="PAS-F4-Filtros_inversos_deconvolucion.html">New</a> <a href="PAS-F-Filtros_inversos_deconvolucion.jl.html">Old</a> </li>
     <li> F.5 Filtros adaptados y autofiltros:
-      <!-- <a href="PAS-F5-Filtros_adaptados.html">New</a> --> <a href="PAS-F-Filtros_adaptados.jl.html">Old</a> </li>
+      <a href="PAS-F5-Filtros_adaptados.html">New</a> <a href="PAS-F-Filtros_adaptados.jl.html">Old</a> </li>
     <li> F.6 Filtro Kalman:
-      <!-- <a href="PAS-F6-Filtro_Kalman.html">New</a> --> <a href="PAS-F-Filtro_Kalman.jl.html">Old</a> </li>
+      <a href="PAS-F6-Filtro_Kalman.html">New</a> <a href="PAS-F-Filtro_Kalman.jl.html">Old</a> </li>
     </ul>
 
     <h3> G. Filtros adaptativos </h3>
