--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
     <h3> G. Filtros adaptativos </h3>
     <ul>
     <li> G.1. Principios de los filtros adaptativos:
-      <!-- <a href="PAS-G1-Filtros_adaptativos.html">New</a> --> <a href="PAS-G-Filtros_adaptativos.jl.html">Old</a> </li>
+      <a href="PAS-G1-Filtros_adaptativos.html">New</a> <a href="PAS-G-Filtros_adaptativos.jl.html">Old</a> </li>
     <li> G.2. Método del descenso más pronunciado:
-      <!-- <a href="PAS-G2-Descenso_mas_pronunciado.html">New</a> --> <a href="PAS-G-Descenso_mas_pronunciado.jl.html">Old</a> </li>
+      <a href="PAS-G2-Descenso_mas_pronunciado.html">New</a> <a href="PAS-G-Descenso_mas_pronunciado.jl.html">Old</a> </li>
     <li> G.3. Método de los mínimos cuadrados:
-      <!-- <a href="PAS-G3-Minimos_cuadrados.html">New</a> --> <a href="PAS-G-Minimos_cuadrados.jl.html">Old</a> </li>
+      <a href="PAS-G3-Minimos_cuadrados.html">New</a> <a href="PAS-G-Minimos_cuadrados.jl.html">Old</a> </li>
     </ul>
 
   </body>
